--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,1 +1,20 @@
+spring:
+  application:
+    name: cards-api
 
+  sql:
+    init:
+      mode: always
+      continue-on-error: false
+logging:
+  level:
+    "com.logicea.cardsapi" : ${LOG_LEVEL:DEBUG}
+    "liquibase" : info
+  file:
+    path: ${LOG_PATH:/tmp/cards/}
+server:
+  port: ${PORT:8080}
+management:
+  endpoint:
+    health:
+      enabled: true
