Added OpenAPI Swagger support.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,7 +1,8 @@
 spring:
   application:
     name: cards-api
-
+  liquibase:
+    change-log: db/changelog/db-test-changelog.yaml
   sql:
     init:
       mode: always
