Add liquibase changelog files, database structure and init data sql files.

--- a/src/test/resources/db/changelog/db-test-changelog.yaml
+++ b/src/test/resources/db/changelog/db-test-changelog.yaml
@@ -1,2 +1,19 @@
 databaseChangeLog:
-  - 
+  - include:
+      file: db/changelog/test-changes/init.sql
+  - include:
+      file: db/changelog/test-changes/tbl_roles.sql
+  - include:
+      file: db/changelog/test-changes/tbl_privileges.sql
+  - include:
+      file: db/changelog/test-changes/tbl_role_privileges.sql
+  - include:
+      file: db/changelog/test-changes/tbl_users.sql
+  - include:
+      file: db/changelog/test-changes/tbl_user_roles.sql
+  - include:
+      file: db/changelog/test-changes/tbl_cards.sql
+  - include:
+      file: db/changelog/test-changes/tbl_card_access.sql
+  - includeAll:
+      path: db/changelog/test-changes/data/
