--- a/src/main/resources/db/changelog/db-changelog.yaml
+++ b/src/main/resources/db/changelog/db-changelog.yaml
@@ -1,2 +1,19 @@
 databaseChangeLog:
-  - 
+  - include:
+      file: db/changelog/changes/init.sql
+  - include:
+      file: db/changelog/changes/tbl_roles.sql
+  - include:
+      file: db/changelog/changes/tbl_privileges.sql
+  - include:
+      file: db/changelog/changes/tbl_role_privileges.sql
+  - include:
+      file: db/changelog/changes/tbl_users.sql
+  - include:
+      file: db/changelog/changes/tbl_user_roles.sql
+  - include:
+      file: db/changelog/changes/tbl_cards.sql
+  - include:
+      file: db/changelog/changes/tbl_card_access.sql
+  - includeAll:
+      path: db/changelog/changes/data/
