--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <snakeyaml.version>2.0</snakeyaml.version>
-        <json.webtoken.version>0.9.1</json.webtoken.version>
+        <json.webtoken.version>0.11.5</json.webtoken.version>
     </properties>
     <dependencies>
         <dependency>
@@ -39,7 +39,17 @@
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
+            <artifactId>jjwt-api</artifactId>
+            <version>${json.webtoken.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${json.webtoken.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
             <version>${json.webtoken.version}</version>
         </dependency>
         <dependency>
