Add unit testing to the microservice.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,7 @@ logging:
   level:
     "com.logicea.cardsapi" : ${LOG_LEVEL:DEBUG}
     "liquibase" : info
+    "org.springframework.web.filter.CommonsRequestLoggingFilter" : DEBUG
   file:
     path: ${LOG_PATH:/tmp/cards/}
 server:
