--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
+data/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -36,3 +36,6 @@ build/
 .mvn
 mvnw
 mvnw.cmd
+
+### Process ID ###
+*.pid
