Fix some failing tests.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
       - MAX_IDLE_TIME=3m
       - HASH_FUNCTION=SHA3-256
       - LOG_PATH=/var/log/
-      - LOG_LEVEL=DEBUG
+      - LOG_LEVEL=INFO
       - PORT=8080
       - JWT_TOKEN=8705E66163F4715FA42586D510D859BEFDBBBFBE52A191A12E3B7D2EDD230854
     external_links:
